--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Benedict Jones Portfolio</title>
   <link rel="stylesheet" href="styles.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 </head>
 <body>
   <header>
     <div class="header-container">
       <h1>Benedict Jones Portfolio</h1>
-      <p>Designing innovative solutions for a better tomorrow.</p>
+      <p>Innovative Design and Engineering</p>
       <nav>
         <a href="#about">About</a>
         <a href="#projects">Projects</a>
@@ -19,52 +20,41 @@
     </div>
   </header>
 
-  <section id="about">
+  <section id="about" class="fade-in">
     <h2>About Me</h2>
-    <p>Currently studying Design Products at the Royal College of Art, I focus on affecting how people engage with nutrition and creating innovative solutions in engineering, design, and technology.</p>
-    <p>Contact me at <a href="mailto:benedictjnz@gmail.com">benedictjnz@gmail.com</a> or connect on <a href="https://www.linkedin.com/in/benjnz" target="_blank">LinkedIn</a>.</p>
+    <p>I'm studying Design Products at the Royal College of Art, focusing on creating innovative solutions in design, engineering, and interface technology.</p>
+    <p>Feel free to contact me at <a href="mailto:benedictjnz@gmail.com">benedictjnz@gmail.com</a> or via <a href="https://www.linkedin.com/in/benjnz" target="_blank">LinkedIn</a>.</p>
   </section>
 
   <section id="projects">
-    <h2>Projects</h2>
+    <h2 class="fade-in">Projects</h2>
 
-    <div class="project">
+    <!-- Project 1 -->
+    <div class="project card">
       <h3>3D Printing at a Micro-Level</h3>
       <p><strong>Date:</strong> April 2024</p>
-      <p>Exploring the limits of PLA and TPU materials with micro-level printing using manual GCODE for creating meshes with 30-50µm diameters. This was my final-year Engineering degree project.</p>
-      <div class="media-placeholder">[Media Placeholder]</div>
+      <p>Explored the limits of PLA and TPU materials for micro-level printing using manually coded GCODE.</p>
+      <div class="media-placeholder">[Image/Video Placeholder]</div>
     </div>
 
-    <div class="project">
+    <!-- Project 2 -->
+    <div class="project card">
       <h3>Civil Design of a Riverside Retaining Wall</h3>
       <p><strong>Date:</strong> February 2024</p>
-      <p>Designed a retaining wall near a small marina through detailed calculations and drawings as part of a site investigation. Final-year project assessed to a first-class standard.</p>
-      <div class="media-placeholder">[Media Placeholder]</div>
+      <p>Conducted site investigations, calculations, and designs for a retaining wall near a marina.</p>
+      <div class="media-placeholder">[Image/Video Placeholder]</div>
     </div>
 
-    <div class="project">
+    <!-- Project 3 -->
+    <div class="project card">
       <h3>Self-Powered IoTs to Quietly Track Home Life</h3>
       <p><strong>Date:</strong> September 2023</p>
-      <p>Collaborated on research to install and collect data from IoT sensors in domestic settings, visualized through heat-maps and interfaces, co-authoring a NordiCHI conference paper.</p>
-      <div class="media-placeholder">[Media Placeholder]</div>
-    </div>
-
-    <div class="project">
-      <h3>3D Printable Rube Goldberg Machine</h3>
-      <p><strong>Date:</strong> March 2023</p>
-      <p>Led the creation of a fully 3D printable Rube Goldberg machine capable of making a cup of tea, integrating CAD and iterative prototyping.</p>
-      <div class="media-placeholder">[Media Placeholder]</div>
-    </div>
-
-    <div class="project">
-      <h3>Board Game Design: "King of The Hill"</h3>
-      <p><strong>Date:</strong> 2022-2023</p>
-      <p>Designed a strategic board game independently, including pieces, board, packaging, and rules.</p>
-      <div class="media-placeholder">[Media Placeholder]</div>
+      <p>Designed and implemented low-level sensors for tracking home activities, visualized via interfaces.</p>
+      <div class="media-placeholder">[Image/Video Placeholder]</div>
     </div>
   </section>
 
-  <section id="contact">
+  <section id="contact" class="fade-in">
     <h2>Contact</h2>
     <form action="https://formsubmit.co/benedictjnz@gmail.com" method="POST">
       <input type="text" name="name" placeholder="Your Name" required>
@@ -77,6 +67,6 @@
   <footer>
     <p>&copy; 2024 Benedict Jones. All rights reserved.</p>
   </footer>
+  <script src="animations.js"></script>
 </body>
 </html>
-
