--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Project 1 -->
     <div class="project-card">
       <a href="project1.html">
-        <img src="media/project1-placeholder.jpg" alt="3D Printing at a Micro-Level">
+        <img src="microprint.jpg" alt="3D Printing at a Micro-Level">
         <div class="project-title">3D Printing at a Micro-Level</div>
       </a>
     </div>
