--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- Project 2 -->
     <div class="project-card">
       <a href="project2.html">
-        <img src="media/project2-placeholder.jpg" alt="Civil Design of a Riverside Retaining Wall">
+        <img src="drawingwall.png" alt="Civil Design of a Riverside Retaining Wall">
         <div class="project-title">Civil Design of a Riverside Retaining Wall</div>
       </a>
     </div>
@@ -32,7 +32,7 @@
     <!-- Project 3 -->
     <div class="project-card">
       <a href="project3.html">
-        <img src="media/project3-placeholder.jpg" alt="Self-Powered IoTs to Quietly Track Home Life">
+        <img src="sensors.png" alt="Self-Powered IoTs to Quietly Track Home Life">
         <div class="project-title">Self-Powered IoTs to Quietly Track Home Life</div>
       </a>
     </div>
