--- a/index.html
+++ b/index.html
@@ -37,6 +37,14 @@
       </a>
     </div>
 
+     <!-- Project 3 -->
+    <div class="project-card">
+      <a href="project4.html">
+        <img src="stool.jpg" alt="Self-Powered IoTs to Quietly Track Home Life">
+        <div class="project-title">Bamboo Tension Stool</div>
+      </a>
+    </div>
+
     <!-- Add more project cards as needed -->
   </main>
 
