--- a/index.html
+++ b/index.html
@@ -32,19 +32,35 @@
     <!-- Project 3 -->
     <div class="project-card">
       <a href="project3.html">
-        <img src="sensors.png" alt="Self-Powered IoTs to Quietly Track Home Life">
+        <img src="sensorss.png" alt="Self-Powered IoTs to Quietly Track Home Life">
         <div class="project-title">Self-Powered IoTs to Quietly Track Home Life</div>
       </a>
     </div>
 
-     <!-- Project 3 -->
+     <!-- Project 4 -->
     <div class="project-card">
       <a href="project4.html">
-        <img src="stool.jpg" alt="Self-Powered IoTs to Quietly Track Home Life">
+        <img src="stool.jpg" alt="Bamboo Tension Stool">
         <div class="project-title">Bamboo Tension Stool</div>
       </a>
     </div>
 
+         <!-- Project 5 -->
+    <div class="project-card">
+      <a href="project5.html">
+        <img src="RGmachine.png" alt="3D printable open-source Rube Goldberg Machine ">
+        <div class="project-title">3D printable open source Rube Goldberg Machine</div>
+      </a>
+    </div>
+
+         <!-- Project 5 -->
+    <div class="project-card">
+      <a href="project5.html">
+        <img src="koth.jpg" alt="Novel Stratefic Board Game">
+        <div class="project-title">Novel Stratefic Board Game</div>
+      </a>
+    </div>
+    
     <!-- Add more project cards as needed -->
   </main>
 
