--- a/index.html
+++ b/index.html
@@ -53,11 +53,27 @@
       </a>
     </div>
 
-         <!-- Project 5 -->
+         <!-- Project 6 -->
     <div class="project-card">
-      <a href="project5.html">
-        <img src="koth.jpg" alt="Novel Stratefic Board Game">
-        <div class="project-title">Novel Stratefic Board Game</div>
+      <a href="project6.html">
+        <img src="koth.jpg" alt="Novel Strategic Board Game">
+        <div class="project-title">Novel Strategic Board Game</div>
+      </a>
+    </div>
+
+    <!-- Project 7 -->
+    <div class="project-card">
+      <a href="project7.html">
+        <img src="duzcathedral.jpg" alt="Gingerbreaad Architecture">
+        <div class="project-title">Gingerbreaad Architecture</div>
+      </a>
+    </div>
+
+    <!-- Project 8 -->
+    <div class="project-card">
+      <a href="project8.html">
+        <img src="gallifrey.png" alt="Animation">
+        <div class="project-title">Animation</div>
       </a>
     </div>
     
