--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>
     <div class="hero">
       <h1>Benedict Jones</h1>
-      <p>Innovative, Design & Engineering</p>
+      <p>Innovation, Design & Engineering</p>
     </div>
   </header>
 
