--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <script src="https://cdn.jsdelivr.net/npm/three@0.158.0/examples/jsm/loaders/GLTFLoader.js"></script>
     <!-- Your custom script -->
     <script type="module" src="script.js"></script>
+    test
 </body>
 </html>
