--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     </style>
 </head>
 <body>
-    <!-- Title displayed above the scene -->
     <div class="title">My Portfolio Room</div>
-    <!-- JavaScript -->
-    <script type="module" src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.155.0/build/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.155.0/examples/js/loaders/GLTFLoader.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
