--- a/index.html
+++ b/index.html
@@ -23,8 +23,6 @@
 </head>
 <body>
     <div class="title">My Portfolio Room</div>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.155.0/build/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.155.0/examples/js/loaders/GLTFLoader.js"></script>
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script> <!-- Use type="module" -->
 </body>
 </html>
