--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
 <body>
     <div class="title">My Portfolio Room</div>
 
-    <!-- Include Three.js via CDN -->
+    <!-- Include Three.js and GLTFLoader from CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r150/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.155.0/examples/js/loaders/GLTFLoader.js"></script>
 
+    <!-- Your custom script -->
     <script src="script.js"></script>
 </body>
 </html>
