--- a/index.html
+++ b/index.html
@@ -1,34 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio Room</title>
-    <style>
-        body {
-            margin: 0;
-            overflow: hidden;
-        }
-        .title {
-            position: absolute;
-            top: 20px;
-            left: 50%;
-            transform: translateX(-50%);
-            color: white;
-            font-size: 24px;
-            font-family: Arial, sans-serif;
-            z-index: 10;
-        }
-    </style>
-</head>
-<body>
-    <div class="title">My Portfolio Room</div>
-
-    <!-- Include Three.js and GLTFLoader from CDN -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r150/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.155.0/examples/js/loaders/GLTFLoader.js"></script>
-
-    <!-- Your custom script -->
-    <script src="script.js"></script>
-</body>
-</html>
+ <header>
+    <div class="hero">
+      <h1>Benedict Jones</h1>
+      <p>Innovative, Design & Engineering</p>
+      <p>Innovation, Design & Engineering</p>
+    </div>
+  </header>
