--- a/index.html
+++ b/index.html
@@ -1,7 +1,29 @@
- <header>
-    <div class="hero">
-      <h1>Benedict Jones</h1>
-      <p>Innovative, Design & Engineering</p>
-      <p>Innovation, Design & Engineering</p>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="utf-8">
+		<title>Millennium Falcon</title>
+
+		<link rel="stylesheet" href="public/index.css">
+
+    <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
+    <script type="importmap">
+      {
+        "imports": {
+          "three": "https://unpkg.com/three@v0.163.0/build/three.module.js",
+          "three/addons/": "https://unpkg.com/three@v0.163.0/examples/jsm/"
+        }
+      }
+    </script>
+	</head>
+	<body>
+    <div id="heading">
+      <h1>THE MILLENNIUM FALCON</h1>
+      <div class="border"></div>
     </div>
-  </header>
+    <div id="progress-container">
+      <div id="progress">Engaging Hyperdrive...</div>
+    </div>
+		<script type="module" src="./main.js"></script>
+	</body>
+</html>
