--- a/index.html
+++ b/index.html
@@ -1,29 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>Millennium Falcon</title>
+<header>
+    <div class="hero">
+      <h1>Benedict Jones</h1>
+      <p>Innovative, Design & Engineering</p>
+      <p>Innovation, Design & Engineering</p>
+	    <!-- Import the component -->
+<script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/4.0.0/model-viewer.min.js"></script>
 
-		<link rel="stylesheet" href="public/index.css">
-
-    <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
-    <script type="importmap">
-      {
-        "imports": {
-          "three": "https://unpkg.com/three@v0.163.0/build/three.module.js",
-          "three/addons/": "https://unpkg.com/three@v0.163.0/examples/jsm/"
-        }
-      }
-    </script>
-	</head>
-	<body>
-    <div id="heading">
-      <h1>THE MILLENNIUM FALCON</h1>
-      <div class="border"></div>
+<!-- Use it like any other HTML element -->
+<model-viewer alt="Neil Armstrong's Spacesuit from the Smithsonian Digitization Programs Office and National Air and Space Museum" src="untitled.glb" ar environment-image="shared-assets/environments/moon_1k.hdr" poster="shared-assets/models/NeilArmstrong.webp" shadow-intensity="1" camera-controls touch-action="pan-y"></model-viewer>
     </div>
-    <div id="progress-container">
-      <div id="progress">Engaging Hyperdrive...</div>
-    </div>
-		<script type="module" src="./main.js"></script>
-	</body>
-</html>
+  </header>
