--- a/index.html
+++ b/index.html
@@ -7,13 +7,33 @@
   <link rel="stylesheet" href="styles.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
   <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/4.0.0/model-viewer.min.js"></script>
+  <style>
+    .hero {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 20px;
+    }
+
+    .hero-text {
+      flex: 1;
+    }
+
+    model-viewer {
+      flex-shrink: 0;
+      width: 300px;
+      height: 300px;
+    }
+  </style>
 </head>
 <body>
   <header>
     <div class="hero">
-      <h1>Benedict Jones</h1>
-      <p>Innovation, Design & Engineering</p>
-      
+      <div class="hero-text">
+        <h1>Benedict Jones</h1>
+        <p>Innovation, Design & Engineering</p>
+      </div>
+
       <!-- Fixed View 3D Model -->
       <model-viewer
         alt="3D Model Example"
