--- a/index.html
+++ b/index.html
@@ -6,52 +6,113 @@
   <title>Benedict Jones Portfolio</title>
   <link rel="stylesheet" href="styles.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-  <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/4.0.0/model-viewer.min.js"></script>
   <style>
-    .hero {
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+      background-color: #f5f5f7;
+      margin: 0;
+      padding: 0;
+      color: #333;
+    }
+
+    header {
       display: flex;
+      justify-content: center;
       align-items: center;
-      padding: 20px;
+      padding: 60px 20px;
+      background-color: #fff;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     }
 
     .hero-text {
-      flex: 1;
-      margin-right: 15px; /* Adds spacing between text and model */
+      text-align: center;
     }
 
-    model-viewer {
-      flex-shrink: 0;
-      width: 200px; /* Smaller size for the model */
-      height: 200px;
-      box-sizing: border-box; /* Ensures padding/margins don't affect layout */
+    .hero-text h1 {
+      font-size: 40px;
+      font-weight: bold;
+      color: #333;
+      margin-bottom: 10px;
+    }
+
+    .hero-text p {
+      font-size: 18px;
+      color: #555;
+    }
+
+    main {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+      gap: 40px;
+      padding: 40px;
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+
+    .project-card {
+      background-color: #fff;
+      border-radius: 12px;
+      overflow: hidden;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      transition: transform 0.3s ease;
+    }
+
+    .project-card img {
+      width: 100%;
+      height: auto;
+      display: block;
+    }
+
+    .project-card .project-title {
+      padding: 20px;
+      font-size: 18px;
+      font-weight: bold;
+      text-align: center;
+      color: #333;
+      background-color: #f7f7f7;
+    }
+
+    .project-card:hover {
+      transform: translateY(-10px);
+    }
+
+    footer {
+      text-align: center;
+      padding: 20px;
+      background-color: #fff;
+      box-shadow: 0 -4px 12px rgba(0, 0, 0, 0.1);
+      margin-top: 40px;
+    }
+
+    footer p {
+      font-size: 14px;
+      color: #777;
+    }
+
+    @media (max-width: 600px) {
+      header {
+        padding: 40px 20px;
+      }
+
+      .hero-text h1 {
+        font-size: 30px;
+      }
+
+      .hero-text p {
+        font-size: 16px;
+      }
     }
   </style>
 </head>
 <body>
   <header>
-    <div class="hero">
-      <div class="hero-text">
-        <h1>Benedict Jones</h1>
-        <p>Innovation, Design & Engineering</p>
-      </div>
-
-      <!-- Fixed View 3D Model -->
-      <model-viewer
-        alt="3D Model Example"
-        src="untitled.glb"
-        shadow-intensity="1"
-        camera-controls
-        camera-orbit="0deg 75deg 2m"
-        field-of-view="50deg"
-        camera-target="0m 1m 0m"
-        scale="1 1 1"
-        orientation="0deg 0deg 0deg"
-        touch-action="pan-y">
-      </model-viewer>
+    <div class="hero-text">
+      <h1>Benedict Jones</h1>
+      <p>Innovation, Design & Engineering</p>
     </div>
   </header>
 
-  <main class="gallery">
+  <main>
     <!-- Project Cards -->
     <div class="project-card">
       <a href="project1.html">
@@ -84,7 +145,7 @@
     <div class="project-card">
       <a href="project5.html">
         <img src="RGmachine.png" alt="3D printable open-source Rube Goldberg Machine">
-        <div class="project-title">3D printable open source Rube Goldberg Machine</div>
+        <div class="project-title">3D printable open-source Rube Goldberg Machine</div>
       </a>
     </div>
 
