--- a/index.html
+++ b/index.html
@@ -3,96 +3,36 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Benedict Jones Portfolio</title>
+  <title>Simple Gradient Layout</title>
   <link rel="stylesheet" href="styles.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 </head>
 <body>
-  <header>
-    <div class="hero-text">
-      <h1>Benedict Jones</h1>
-      <p>Innovation, Design & Engineering</p>
-    </div>
-  </header>
-
   <main>
     <!-- Row 1: Blue Gradient -->
-    <section class="section">
-      <div class="section-inner">
-        <div class="column">
-          <a href="project1.html">
-            <img src="microprint.jpg" alt="3D Printing at a Micro-Level">
-            <div class="project-title">3D Printing at a Micro-Level</div>
-          </a>
-        </div>
-        <div class="column">
-          <a href="project2.html">
-            <img src="drawingwall.png" alt="Civil Design of a Riverside Retaining Wall">
-            <div class="project-title">Civil Design of a Riverside Retaining Wall</div>
-          </a>
-        </div>
-      </div>
+    <section class="section blue-gradient">
+      <div class="column"></div>
+      <div class="column"></div>
     </section>
 
     <!-- Row 2: Green Gradient -->
-    <section class="section">
-      <div class="section-inner">
-        <div class="column">
-          <a href="project3.html">
-            <img src="sensorss.png" alt="Self-Powered IoTs to Quietly Track Home Life">
-            <div class="project-title">Self-Powered IoTs to Quietly Track Home Life</div>
-          </a>
-        </div>
-        <div class="column">
-          <a href="project4.html">
-            <img src="stool.jpg" alt="Bamboo Tension Stool">
-            <div class="project-title">Bamboo Tension Stool</div>
-          </a>
-        </div>
-      </div>
+    <section class="section green-gradient">
+      <div class="column"></div>
+      <div class="column"></div>
     </section>
 
     <!-- Row 3: Yellow Gradient -->
-    <section class="section">
-      <div class="section-inner">
-        <div class="column">
-          <a href="project5.html">
-            <img src="RGmachine.png" alt="3D printable open-source Rube Goldberg Machine">
-            <div class="project-title">3D printable open-source Rube Goldberg Machine</div>
-          </a>
-        </div>
-        <div class="column">
-          <a href="project6.html">
-            <img src="koth.jpg" alt="Novel Strategic Board Game">
-            <div class="project-title">Novel Strategic Board Game</div>
-          </a>
-        </div>
-      </div>
+    <section class="section yellow-gradient">
+      <div class="column"></div>
+      <div class="column"></div>
     </section>
 
     <!-- Row 4: Pink Gradient -->
-    <section class="section">
-      <div class="section-inner">
-        <div class="column">
-          <a href="project7.html">
-            <img src="duzcathedral.jpg" alt="Gingerbread Architecture">
-            <div class="project-title">Gingerbread Architecture</div>
-          </a>
-        </div>
-        <div class="column">
-          <a href="project8.html">
-            <img src="gallifrey.png" alt="Animation">
-            <div class="project-title">Animation</div>
-          </a>
-        </div>
-      </div>
+    <section class="section pink-gradient">
+      <div class="column"></div>
+      <div class="column"></div>
     </section>
   </main>
 
-  <footer>
-    <p>&copy; 2024 Benedict Jones. All rights reserved.</p>
-  </footer>
-
-  <script src="animations.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
