--- a/index.html
+++ b/index.html
@@ -14,17 +14,26 @@
       <div class="column"></div>
     </section>
 
+    <!-- White line separator -->
+    <div class="separator"></div>
+
     <!-- Row 2: Green Gradient -->
     <section class="section green-gradient">
       <div class="column"></div>
       <div class="column"></div>
     </section>
 
+    <!-- White line separator -->
+    <div class="separator"></div>
+
     <!-- Row 3: Yellow Gradient -->
     <section class="section yellow-gradient">
       <div class="column"></div>
       <div class="column"></div>
     </section>
+
+    <!-- White line separator -->
+    <div class="separator"></div>
 
     <!-- Row 4: Pink Gradient -->
     <section class="section pink-gradient">
