--- a/index.html
+++ b/index.html
@@ -8,37 +8,29 @@
 </head>
 <body>
   <main>
-    <!-- Row 1: Blue Gradient -->
-    <section class="section blue-gradient">
-      <div class="column"></div>
-      <div class="column"></div>
+    <!-- Row 1: Neutral Gradient -->
+    <section class="section neutral-gradient">
     </section>
 
-    <!-- White line separator -->
+    <!-- Thick white line separator -->
     <div class="separator"></div>
 
-    <!-- Row 2: Green Gradient -->
-    <section class="section green-gradient">
-      <div class="column"></div>
-      <div class="column"></div>
+    <!-- Row 2: Light Gray Gradient -->
+    <section class="section lightgray-gradient">
     </section>
 
-    <!-- White line separator -->
+    <!-- Thick white line separator -->
     <div class="separator"></div>
 
-    <!-- Row 3: Yellow Gradient -->
-    <section class="section yellow-gradient">
-      <div class="column"></div>
-      <div class="column"></div>
+    <!-- Row 3: Beige Gradient -->
+    <section class="section beige-gradient">
     </section>
 
-    <!-- White line separator -->
+    <!-- Thick white line separator -->
     <div class="separator"></div>
 
-    <!-- Row 4: Pink Gradient -->
-    <section class="section pink-gradient">
-      <div class="column"></div>
-      <div class="column"></div>
+    <!-- Row 4: Soft Gray Gradient -->
+    <section class="section softgray-gradient">
     </section>
   </main>
 
