--- a/index.html
+++ b/index.html
@@ -3,36 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Simple Gradient Layout</title>
+  <title>Project Showcase</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <main>
-    <!-- Row 1: Neutral Gradient -->
-    <section class="section neutral-gradient">
-    </section>
-
-    <!-- Thick white line separator -->
-    <div class="separator"></div>
-
-    <!-- Row 2: Light Gray Gradient -->
-    <section class="section lightgray-gradient">
-    </section>
-
-    <!-- Thick white line separator -->
-    <div class="separator"></div>
-
-    <!-- Row 3: Beige Gradient -->
-    <section class="section beige-gradient">
-    </section>
-
-    <!-- Thick white line separator -->
-    <div class="separator"></div>
-
-    <!-- Row 4: Soft Gray Gradient -->
-    <section class="section softgray-gradient">
-    </section>
-  </main>
+  <div class="container">
+    <div class="row" id="row1"></div>
+    <div class="row" id="row2"></div>
+    <div class="row" id="row3"></div>
+    <div class="row" id="row4"></div>
+    <div class="row" id="row5"></div>
+  </div>
 
   <script src="main.js"></script>
 </body>
