--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
   <div class="container">
     <div class="row" id="row1"></div>
+    <div class="divider"></div>
     <div class="row" id="row2"></div>
+    <div class="divider"></div>
     <div class="row" id="row3"></div>
-    <div class="row" id="row4"></div>
-    <div class="row" id="row5"></div>
   </div>
 
   <script src="main.js"></script>
