--- a/index.html
+++ b/index.html
@@ -3,16 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Project Showcase</title>
+  <title>Single Row with Banner</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="container">
-    <div class="row" id="row1"></div>
-    <div class="divider"></div>
-    <div class="row" id="row2"></div>
-    <div class="divider"></div>
-    <div class="row" id="row3"></div>
+  <div class="row">
+    <img src="StoolBanner.png" alt="Banner Image" class="banner">
   </div>
 
   <script src="main.js"></script>
