--- a/index.html
+++ b/index.html
@@ -3,12 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Single Row with Banner</title>
+  <title>Project Showcase</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="row">
-    <img src="StoolBanner.png" alt="Banner Image" class="banner">
+  <div class="container">
+    <!-- First row with banner -->
+    <div class="row first-row">
+      <img src="banner.jpg" alt="Banner Image" class="banner">
+    </div>
+    <div class="divider"></div>
+
+    <!-- Remaining rows -->
+    <div class="row" id="row2"></div>
+    <div class="divider"></div>
+    <div class="row" id="row3"></div>
   </div>
 
   <script src="main.js"></script>
