--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="container">
     <!-- First row with banner -->
     <div class="row first-row">
-      <img src="banner.jpg" alt="Banner Image" class="banner">
+      <img src="StoolBanner.png" alt="Banner Image" class="banner">
     </div>
     <div class="divider"></div>
 
