--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <!-- Top banner with logo and menu -->
+  <header class="top-banner">
+    <div class="logo">My Logo</div>
+    <nav class="menu">
+      <a href="#home">Home</a>
+      <a href="#projects">Projects</a>
+      <a href="#about">About</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
+
   <div class="container">
     <!-- First row with banner -->
     <div class="row first-row">
