--- a/index.html
+++ b/index.html
@@ -3,34 +3,47 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Project Showcase</title>
+  <title>Responsive Banner</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <!-- Top banner with logo and menu -->
-  <header class="top-banner">
-    <div class="logo">My Logo</div>
-    <nav class="menu">
-      <a href="#home">Home</a>
-      <a href="#projects">Projects</a>
-      <a href="#about">About</a>
-      <a href="#contact">Contact</a>
-    </nav>
-  </header>
-
-  <div class="container">
-    <!-- First row with banner -->
-    <div class="row first-row">
-      <img src="StoolBanner.png" alt="Banner Image" class="banner">
+  <!-- Top Banner -->
+  <div class="top-banner">
+    <div class="logo">
+      <img src="logo.png" alt="Logo" class="logo-img">
     </div>
-    <div class="divider"></div>
-
-    <!-- Remaining rows -->
-    <div class="row" id="row2"></div>
-    <div class="divider"></div>
-    <div class="row" id="row3"></div>
+    <div class="menu">
+      <a href="#link1">Link 1</a>
+      <a href="#link2">Link 2</a>
+      <a href="#link3">Link 3</a>
+      <a href="#link4">Link 4</a>
+    </div>
   </div>
 
-  <script src="main.js"></script>
+  <!-- Page Content -->
+  <div class="container">
+    <!-- First Row -->
+    <div class="first-row">
+      <img src="StoolBanner.png" alt="Banner Image" class="banner">
+    </div>
+    <!-- Divider -->
+    <div class="divider"></div>
+    <!-- Other Rows -->
+    <div class="row">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <div class="divider"></div>
+    <div class="row">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+  </div>
 </body>
 </html>
