--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
   <!-- Top Banner -->
   <div class="top-banner">
     <div class="logo">
-      <img src="logo.png" alt="Logo" class="logo-img">
-    </div>
+  <img src="logo.png" 
+       data-animated="logo.gif" 
+       data-static="logo.png" 
+       alt="Logo" class="logo-img">
+</div>
+
     <div class="menu">
       <a href="#link1">Link 1</a>
       <a href="#link2">Link 2</a>
