--- a/index.html
+++ b/index.html
@@ -50,4 +50,7 @@
     </div>
   </div>
 </body>
+  <!-- Include the JavaScript file at the end of the body -->
+  <script src="main.js"></script>
+</body>
 </html>
