--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
 <body>
   <!-- Top Banner -->
   <div class="top-banner">
-    <div class="logo">
-  <img src="logo.png" 
-       data-animated="logo.gif" 
-       data-static="logo.png" 
-       alt="Logo" class="logo-img">
-</div>
+  <div class="logo">
+    <img 
+      src="logo.png" 
+      data-gif="logo.gif" 
+      data-duration="1520" <!-- Duration of the GIF in milliseconds -->
+      alt="Logo" 
+      class="logo-img"
+    >
+  </div>
 
     <div class="menu">
       <a href="#link1">Link 1</a>
