--- a/index.html
+++ b/index.html
@@ -9,16 +9,15 @@
 <body>
   <!-- Top Banner -->
   <div class="top-banner">
-  <div class="logo">
-    <img 
-      src="logo.png" 
-      data-gif="logo.gif" 
-      data-duration="1520" <!-- Duration of the GIF in milliseconds -->
-      alt="Logo" 
-      class="logo-img"
-    >
-  </div>
-
+    <div class="logo">
+      <img 
+        src="logo.png" 
+        data-gif="logo.gif" 
+        data-duration="1520" <!--duration -->
+        alt="Logo" 
+        class="logo-img"
+      >
+    </div>
     <div class="menu">
       <a href="#link1">Link 1</a>
       <a href="#link2">Link 2</a>
@@ -52,7 +51,7 @@
       <div></div>
     </div>
   </div>
-</body>
+
   <!-- Include the JavaScript file at the end of the body -->
   <script src="main.js"></script>
 </body>
