--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <img 
         src="logo.png" 
         data-gif="logo.gif" 
-        data-duration="1520" <!--duration -->
+        data-duration="1520"
         alt="Logo" 
         class="logo-img"
       >
