--- a/index.html
+++ b/index.html
@@ -21,10 +21,8 @@
       >
     </div>
     <div class="menu">
-      <a href="#link1">Link 1</a>
-      <a href="#link2">Link 2</a>
-      <a href="#link3">Link 3</a>
-      <a href="#link4">Link 4</a>
+      <a href="#About">About Me</a>
+      <a href="#Connect">Connect</a>
     </div>
   </div>
 
