--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
   <!-- Page Content -->
   <div class="container">
     <!-- First Row -->
-    <div class="first-row">
-      <img src="StoolBanner.png" alt="Banner Image" class="banner">
-    </div>
+  <div class="first-row">
+    <img src="StoolBanner.png" alt="Banner Image" class="banner">
+    <img src="rca.png" alt="Logo Overlay" class="logo-overlay">
+  </div>
     <!-- Divider -->
     <div class="divider"></div>
     <!-- Other Rows -->
