--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
   <!-- Page Content -->
   <div class="container">
     <!-- First Row -->
-  <div class="first-row">
-    <img src="StoolBanner.png" alt="Banner Image" class="banner">
-    <img src="rca.png" alt="Logo Overlay" class="logo-overlay">
+   <div class="first-row">
+    <picture>
+      <source srcset="StoolBanner.webp" type="image/webp">
+      <img src="StoolBanner.png" alt="Banner Image" class="banner">
+    </picture>
   </div>
     <!-- Divider -->
     <div class="divider"></div>
