--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
   <div class="container">
     <!-- First Row -->
    <div class="first-row">
-    <picture>
-      <source srcset="StoolBanner.webp" type="image/webp">
-      <img src="StoolBanner.png" alt="Banner Image" class="banner">
-    </picture>
-  </div>
+  <picture>
+    <source srcset="StoolBanner.webp" type="image/webp">
+    <img src="StoolBanner.png" alt="Banner Image" class="banner">
+  </picture>
+  <img src="rca.png" alt="Logo Overlay" class="logo-overlay">
+</div>
     <!-- Divider -->
     <div class="divider"></div>
     <!-- Other Rows -->
