--- a/index.html
+++ b/index.html
@@ -27,15 +27,29 @@
   </div>
 
   <!-- Page Content -->
-  <div class="container">
-    <!-- First Row -->
-   <div class="first-row">
-  <picture>
-    <source srcset="StoolBanner.webp" type="image/webp">
-    <img src="StoolBanner.png" alt="Banner Image" class="banner">
-  </picture>
-  <img src="rca.png" alt="Logo Overlay" class="logo-overlay">
+ <div class="container">
+  <!-- First Row -->
+  <div class="first-row">
+    <picture>
+      <source srcset="StoolBanner.webp" type="image/webp">
+      <img src="StoolBanner.png" alt="Banner Image" class="banner">
+    </picture>
+    <img src="rca.png" alt="Logo Overlay" class="logo-overlay">
+  </div>
+  <!-- Divider -->
+  <div class="divider"></div>
+  <!-- Second Row (Copy of the First Row) -->
+  <div class="second-row">
+    <picture>
+      <source srcset="MicroPrints.webp" type="image/webp">
+      <img src="MicroPrints.png" alt="Second Banner Image" class="banner">
+    </picture>
+    <img src="durham.png" alt="Second Logo Overlay" class="logo-overlay">
+  </div>
+  <!-- Divider -->
+  <div class="divider"></div>
 </div>
+
     <!-- Divider -->
     <div class="divider"></div>
     <!-- Other Rows -->
