--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </div>
 
   <!-- Page Content -->
- <div class="container">
+<div class="container">
   <!-- First Row -->
   <div class="first-row">
     <picture>
@@ -38,17 +38,19 @@
   </div>
   <!-- Divider -->
   <div class="divider"></div>
-  <!-- Second Row (Copy of the First Row) -->
+  <!-- Second Row -->
   <div class="second-row">
     <picture>
       <source srcset="MicroPrints.webp" type="image/webp">
       <img src="MicroPrints.png" alt="Second Banner Image" class="banner">
     </picture>
-    <img src="durham.png" alt="Second Logo Overlay" class="logo-overlay">
+    <img src="fullcontrol.png" alt="Second Logo Overlay" class="logo-overlay">
+    <img src="durham.png" alt="Logo Above" class="logo-above">
   </div>
   <!-- Divider -->
   <div class="divider"></div>
 </div>
+
 
     <!-- Divider -->
     <div class="divider"></div>
