--- a/index.html
+++ b/index.html
@@ -49,6 +49,16 @@
   </div>
   <!-- Divider -->
   <div class="divider"></div>
+  <!-- Third Row -->
+  <div class="third-row">
+    <picture>
+      <source srcset="IoT.webp" type="image/webp">
+      <img src="IoT.webp" alt="Third Banner Image" class="banner">
+    </picture>
+    <img src="swansea.png" alt="Third Logo Overlay" class="logo-overlay-third">
+  </div>
+  <!-- Divider -->
+  <div class="divider"></div>
 </div>
 
 
