--- a/index.html
+++ b/index.html
@@ -59,6 +59,14 @@
   </div>
   <!-- Divider -->
   <div class="divider"></div>
+   <!-- Fourth Row -->
+  <div class="fourth-row">
+    <picture>
+      <source srcset="KOTH.webp" type="image/webp">
+      <img src="KOTH.webp" alt="Third Banner Image" class="banner">
+  </div>
+  <!-- Divider -->
+  <div class="divider"></div>
 </div>
 
 
